Trying to run ioio service from main activity
Problem: Not recognising device yet
- got source code line "startService(new Intent(this,
HelloIOIOService.class));" from example code, still needs debugging

--- a/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
+++ b/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.yasmin.campustourguide.MapsActivity" >
 
     <Button
+    android:id="@+id/start"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="right|bottom"
@@ -22,5 +23,12 @@
         android:layout_height="wrap_content"
         android:background="#ffffff"
         android:editable="false"/>
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:enabled="false"/>
 
 </fragment>
