--- a/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
+++ b/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
@@ -29,26 +29,32 @@
         android:paddingRight="10dp"
         android:textSize="30sp"/>
 
+    <Button
+        android:id="@+id/startGeofences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|top"
+        android:text="Geofences"
+        android:padding="15dp"
+        android:layout_marginTop="20dp"
+        android:paddingRight="10dp"
+        android:textSize="30sp"/>
+
 
     <EditText
         android:id="@+id/left"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:gravity="bottom|left"/>
+        android:gravity="bottom|left"
+        android:editable="false"/>
 
     <EditText
         android:id="@+id/right"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:layout_below="@id/left"/>
-
-    <ToggleButton
-        android:text="ToggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:enabled="false"/>
+        android:layout_below="@id/left"
+        android:editable="false"/>
 
 </fragment>
