Added: sound, orientation and bearings/distances
-Geofencing worked when testing with simple pwm outputs entering
bancroft road, hopefully keeps working

-Added Rafi's sound file of dog barking, will replace this with actual
geofence stop voices

- Added custom marker with picture, marker found online in png format
and edited the frame with Santander Bank, by adding '.icon' line

-Added Rob's code of working out angle of device which works at 0 to 180
and then -180 to -0, works fine

- Added Bearings and distances of turning points:
--France House to Turning point
-- Turning point to Canal turning
-- Canal Turning to Canal Side

--- a/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
+++ b/CampusTourGuide/app/src/main/res/layout/activity_maps.xml
@@ -54,7 +54,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:layout_below="@id/left"
-        android:editable="false"/>
+        android:layout_below="@id/left"/>
 
 </fragment>
